Når vi laver tar.gz i stedet for zip, skal vi også fjerne tar.gz i stedet for zip.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -164,7 +164,7 @@ palmpilot:
 endif !BUILD_PALM
 
 palmpilot.clean:	
-	rm -Rf $(targetname)-palm-*.zip PalmBuildDir/
+	rm -Rf $(targetname)-palm-*.tar.gz PalmBuildDir/
 
 
 ################################################################################
