Indsæt -pdf-led i pdf-filernes navne.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -269,8 +269,8 @@ html.clean:
 ################################################################################
 .PHONY : pdf
 if BUILD_PDF
-pdf: $(targetname)-$(version).pdf
-$(targetname)-$(version).pdf: $(dep_sgml_filer) eksempler-sgml-PDF
+pdf: $(targetname)-pdf-$(version).pdf
+$(targetname)-pdf-$(version).pdf: $(dep_sgml_filer) eksempler-sgml-PDF
 	@echo ".........................................."
 	@echo "Target $(targetshortname):pdf"
 	@echo ".........................................."
@@ -307,8 +307,8 @@ $(targetname)-$(version).pdf: $(dep_sgml_filer) eksempler-sgml-PDF
 #	(cd PdfBuildDir && echo "Running db2pdf" && db2pdf bog.sgml; true)
 #	(cd PdfBuildDir && echo "Running db2pdf 1/2" && db2pdf bog.sgml; true)
 #	(cd PdfBuildDir && echo "Running db2pdf 2/2" && db2pdf bog.sgml; true)
-	mv PdfBuildDir/bog.pdf $(targetname)-$(version).pdf
-	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
+	mv PdfBuildDir/bog.pdf $(targetname)-pdf-$(version).pdf
+	pdfinfo $(targetname)-pdf-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
 #	rm -rf PdfBuildDir
 	@echo "Done PDF (pdf)"
 	@echo ""
