Når vi gzipper pdf-filerne er det .pdf.gz-filer der dkal fjernes.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -316,7 +316,7 @@ $(targetname)-pdf-$(version).pdf.gz: $(dep_sgml_filer) eksempler-sgml-PDF
 endif BUILD_PDF
 
 pdf.clean:	
-	rm -Rf PdfBuildDir sideantal.txt $(targetname)-*.pdf
+	rm -Rf PdfBuildDir sideantal.txt $(targetname)-*.pdf.gz
 
 
 ################################################################################
