--- a/Makefile.alle
+++ b/Makefile.alle
@@ -97,11 +97,11 @@ sgml:
 ################################################################################
 # Byg Palm Pilot udgaven
 ################################################################################
-# Laver en zip fil, kræver alle/index.html
+# Laver en tar.gz fil, kræver alle/index.html
 # dax: ændrer palmpilot_navn til Schou-Pto konvention
 .PHONY : palmpilot
 if BUILD_PALM
-palmpilot_navn:=$(targetname)-palm-$(version).zip
+palmpilot_navn:=$(targetname)-palm-$(version).tar.gz
 palmpilot:	$(palmpilot_navn)
 $(palmpilot_navn):	html
 	@echo ".........................................."
@@ -113,7 +113,8 @@ $(palmpilot_navn):	html
 	cp palm/* PalmBuildDir || true
 	cp palm-faelles/* PalmBuildDir || true
 	(cd PalmBuildDir && plucker-build -V 0  -P . -f $(targetname) `pwd`/home.html)
-	zip $(palmpilot_navn) PalmBuildDir/*.prc PalmBuildDir/*.pdb PalmBuildDir/*txt
+#	zip $(palmpilot_navn) PalmBuildDir/*.prc PalmBuildDir/*.pdb PalmBuildDir/*txt
+	tar vczf $(palmpilot_navn) PalmBuildDir/*.prc PalmBuildDir/*.pdb PalmBuildDir/*.txt
 else !BUILD_PALM
 palmpilot:
 	@echo "Overspringer palmpilot"
