Vi bygger ikke zip-filer af html-udgaven længere.

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -126,7 +126,7 @@ endif !BUILD_PALM
 ################################################################################
 # dax: dropper anvendelse af basenavn, da matrix kræver noget andet.
 if BUILD_PAKHTML
-pakhtml:	$(targetname)-html-$(version).tar.gz $(targetname)-htmlub-$(version).tar.gz $(targetname)-png-$(version).tar.gz $(targetname)-html-$(version).zip 
+pakhtml:	$(targetname)-html-$(version).tar.gz $(targetname)-htmlub-$(version).tar.gz #$(targetname)-png-$(version).tar.gz $(targetname)-html-$(version).zip 
 
 $(targetname)-html-$(version).tar.gz :	html
 	tar -hczf $(targetname)-html-$(version).tar.gz $(targetshortname)/*
@@ -137,8 +137,8 @@ $(targetname)-htmlub-$(version).tar.gz :	html
 $(targetname)-png-$(version).tar.gz :	html
 	tar -hczf $(targetname)-png-$(version).tar.gz $(targetshortname)/*.png
 
-$(targetname)-html-$(version).zip :	html
-	zip $(targetname)-html-$(version).zip $(targetshortname)/*
+#$(targetname)-html-$(version).zip :	html
+#	zip $(targetname)-html-$(version).zip $(targetshortname)/*
 else !BUILD_PAKHTML
 	@echo "Overspringer pakhtml"
 endif !BUILD_PAKHTML
