Vi laver ikke længere zip-filer af html-udgaven.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -141,7 +141,7 @@ version.sgml.clean:
 ################################################################################
 # Byg Palm Pilot udgaven
 ################################################################################
-# Laver en zip fil, kræver html target
+# Laver en .tar.gz fil, kræver html target
 .PHONY : palmpilot
 if BUILD_PALM
 palmpilot_navn:=$(targetname)-palm-$(version).tar.gz
@@ -186,7 +186,7 @@ $(targetshortname)/$(targetname)-html-$(version).tar.gz:
 	@echo Release: 1mdk >>  $(targetshortname)/$(targetname).spec
 	cat linuxbog.spec >> $(targetshortname)/$(targetname).spec
 	(cd ..;tar hczf $(targetshortname)/$(targetname)-html-$(version).tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler  )
-	(cd ..;zip $(targetshortname)/$(targetname)-html-$(version).zip -r $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
+#	(cd ..;zip $(targetshortname)/$(targetname)-html-$(version).zip -r $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
 	(cd ..;tar hczf $(targetshortname)/$(targetname)-htmlub-$(version).tar.gz $(targetshortname)/$(targetshortname)/*.html $(targetshortname)/$(targetshortname)/*.css $(targetshortname)/eksempler   )
 # 	Tilsvarende for billeder.
 	mv images $(targetshortname)_images
@@ -201,7 +201,7 @@ pakhtml:
 endif !BUILD_PAKHTML
 
 pakhtml.clean:	
-	rm -f $(targetname)-html-*.tar.gz $(targetname)-html-*.zip $(targetname)-htmlub-*.tar.gz $(targetname)-png-*.tar.gz 
+	rm -f $(targetname)-html-*.tar.gz $(targetname)-htmlub-*.tar.gz $(targetname)-png-*.tar.gz # $(targetname)-html-*.zip
 
 
 ################################################################################
