--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -309,14 +309,14 @@ $(targetname)-pdf-$(version).pdf.gz: $(dep_sgml_filer) eksempler-sgml-PDF
 #	(cd PdfBuildDir && echo "Running db2pdf 2/2" && db2pdf bog.sgml; true)
 	mv PdfBuildDir/bog.pdf $(targetname)-pdf-$(version).pdf
 	pdfinfo $(targetname)-pdf-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
-	gzip -9 $(targetname)-pdf-$(version).pdf
+	gzip -c9 $(targetname)-pdf-$(version).pdf > $(targetname)-pdf-$(version).pdf.gz
 #	rm -rf PdfBuildDir
 	@echo "Done PDF (pdf)"
 	@echo ""
 endif BUILD_PDF
 
 pdf.clean:	
-	rm -Rf PdfBuildDir sideantal.txt $(targetname)-*.pdf.gz
+	rm -Rf PdfBuildDir sideantal.txt $(targetname)-*.pdf $(targetname)-*.pdf.gz
 
 
 ################################################################################
