Brug pdf-filernes nye navne.

--- a/Makefile.samling
+++ b/Makefile.samling
@@ -11,14 +11,14 @@ ps:
 	echo "Vi bygger desværre ikke PostScript-bøger for tiden - ØV!"
 #	mkdir ps-samling
 #	@for dir in $(SUBDIRSSAMLING); do \
-#		cp ../$$dir/linuxbog-$$dir-`cat ../$$dir/version.sgml`.ps ps-samling/ || /bin/true; \
+#		cp ../$$dir/linuxbog-$$dir-ps-`cat ../$$dir/version.sgml`.ps ps-samling/ || /bin/true; \
 #	done;
 #	tar vczf linuxbog-samling-ps-$(version).tar.gz ps-samling/
 
 pdf:
 	mkdir pdf-samling
 	@for dir in $(SUBDIRSSAMLING); do \
-		cp ../$$dir/linuxbog-$$dir-`cat ../$$dir/version.sgml`.pdf pdf-samling/ || /bin/true; \
+		cp ../$$dir/linuxbog-$$dir-pdf-`cat ../$$dir/version.sgml`.pdf pdf-samling/ || /bin/true; \
 	done;
 	tar vczf linuxbog-samling-pdf-$(version).tar.gz pdf-samling/
 
