bog.pdf og bog.log skal med i "make clean"

--- a/distro/Makefile
+++ b/distro/Makefile
@@ -118,7 +118,7 @@ bog.pdf: $(sgmlfiler)
 ################################################################################
 clean:
 	@echo clean $(targetshortname)
-	@rm -rf dato.sgml version.sgml linuxbogurl.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
+	@rm -rf bog.pdf bog.log dato.sgml version.sgml linuxbogurl.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
 ifeq ($(lokmake),Makefile_local)
 	@echo X $(lokmake) X
 	@make -f Makefile_local clean
