Brug if i stedet for for til at styre om der skal ske noget i samling/

--- a/Makefile.in
+++ b/Makefile.in
@@ -113,12 +113,12 @@ all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$
 		echo "*** Kører make $@ i $$dir" && \
 		cd $$dir && $(MAKE) eksempler-sgml-HTML eksempler-sgml-PDF $@ ; cd .. ;\
 	done ;
-	@for dir in $(SAMLING); do \
+	@if test "x$(SAMLING)" = "xsamling"; then \
 		echo "*** Kører make $@ i samling" && \
 		cd samling && touch toplevel-kald && \
 		$(MAKE) eksempler-sgml-HTML eksempler-sgml-PDF $@ ; \
-		rm toplevel-kald ; cd .. ; \
-	done ;
+		rm -f toplevel-kald ; cd .. ; \
+	fi ;
 
 
 ################################################################################
