eksempler-SGML-html og eksempler-SGML-pdf manglede

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -239,6 +239,17 @@ endif BUILD_PDF
 
 # dax: parkering af linie efter 1/2.
 # (cd PdfBuildDir && echo "Running db2pdf 2/2" && db2pdf bog.sgml; true)
+#-----------------------------------------------------------------------------
+#--  Bygger SGML/XML-udgaver af alle filer i eksempler:
+
+.PHONY : eksempler-sgml-HTML
+eksempler-sgml-HTML: eksempler/*
+	@echo 'Beklager, målet er ikke implementeret.'
+
+.PHONY : eksempler-sgml-PDF
+eksempler-sgml-PDF: eksempler/*
+	@echo 'Beklager, målet er ikke implementeret.'
+
 ################################################################################
 # CLEAN targets
 ################################################################################
