prøver at imponere grove

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -243,11 +243,11 @@ endif BUILD_PDF
 #--  Bygger SGML/XML-udgaver af alle filer i eksempler:
 
 .PHONY : eksempler-sgml-HTML
-eksempler-sgml-HTML: eksempler/*
+eksempler-sgml-HTML:
 	@echo 'Beklager, målet er ikke implementeret.'
 
 .PHONY : eksempler-sgml-PDF
-eksempler-sgml-PDF: eksempler/*
+eksempler-sgml-PDF:
 	@echo 'Beklager, målet er ikke implementeret.'
 
 ################################################################################
