Justeret byggesystemet, så ".sgml"-, ".xml"- og ".docbook"-filer bliver behandlet ens.

--- a/Makefile.alle
+++ b/Makefile.alle
@@ -222,7 +222,7 @@ $(targetname)-pdf-$(version).pdf.gz: $(sgmlfiler) bog.2pdf.sgml
 	collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	rm -rf PdfBuildDir
 	mkdir PdfBuildDir
-	cp *.{sgml,xml} PdfBuildDir
+	cp *.{sgml,xml,docbook} PdfBuildDir/
 	for dir in $(SUBDIRSALLE); do \
 		(cd PdfBuildDir && ln -sf ../../$$dir/images/*.png .) \
 	done;
