--- a/Makefile.subdir_oldstyle
+++ b/Makefile.subdir_oldstyle
@@ -208,7 +208,7 @@ $(targetname)-$(version).pdf: $(sgmlfiler)
 	collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	rm -rf tempdir
 	mkdir tempdir
-	cp *.{sgml,xml} tempdir
+	cp *.{sgml,xml,docbook} tempdir
 	cp images/*png tempdir
 	(cd tempdir;jw -V html-index -V nochunks -f docbook -b html -o bog bog.sgml)
 	(cd tempdir;collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index)
