--- a/misc/gamle_makefiler/Makefile.SuSE80
+++ b/misc/gamle_makefiler/Makefile.SuSE80
@@ -156,7 +156,7 @@ bog/enfil.html: $(sgmlfiler)
 	mkdir bog1
 	perl ./collateindex.pl -s Symboler  -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	touch test.inc
-	cp *.{sgml,xml} bog1
+	cp *.{sgml,xml,docbook} bog1
 	cp *.inc bog1
 	rm -f test.inc
 	(cd bog1; jade -t sgml -ihtml -d $(cygnus)\#html -V html-index bog.sgml)
@@ -190,7 +190,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	echo '<!ENTITY magic "eps">' > magic.sgml
 	perl ./collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	touch test.inc
-	cp *.{sgml,xml} tempdir
+	cp *.{sgml,xml,docbook} tempdir
 	cp *.inc tempdir
 	rm -f test.inc
 	db2pdf -j "-V html-index" bog.sgml
@@ -201,7 +201,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	mkdir bogpdf
 	touch test.inc
 	cp *.inc bogpdf
-	cp *.{sgml,xml} bogpdf
+	cp *.{sgml,xml,docbook} bogpdf
 	rm -f test.inc
 	rm -f $(targetname)-*.pdf
 	cp images/*.png bogpdf
@@ -223,7 +223,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	echo '<!ENTITY magic "eps">' > magic.sgml
 	touch test.inc	
 	cp *.inc bogps
-	cp *.{sgml,xml} bogps
+	cp *.{sgml,xml,docbook} bogps
 	rm -f test.inc
 	(cd bogps; perl ../../httpsplit.pl *.{sgml,xml})
 	(cd bogps; db2ps bog.sgml )
