--- a/misc/gamle_makefiler/Makefile.subdir_RH72
+++ b/misc/gamle_makefiler/Makefile.subdir_RH72
@@ -8,9 +8,9 @@
 html:
 	rm -rf bog
 	mkdir -p bog
-	cp *sgml bog
+	cp *.{sgml,xml,docbook} bog
 	/usr/bin/collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -N -o bog/stikord.sgml
 	(cd bog;jw -b html --dcl "-V html-index" bog.sgml)
 	/usr/bin/collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o bog/stikord.sgml bog/HTML.index
 	(cd bog;jw -b html  bog.sgml)
-	rm bog/*.{sgml,xml}
+	rm bog/*.{sgml,xml,docbook}
