--- a/misc/gamle_makefiler/Makefile.subdir_RH73
+++ b/misc/gamle_makefiler/Makefile.subdir_RH73
@@ -129,7 +129,7 @@ bog/index.html: $(sgmlfiler)
 	echo '<!ENTITY magic "png">' > magic.sgml
 	mkdir tempdir
 	perl ./collateindex.pl -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
-	cp *.{sgml,xml} tempdir
+	cp *.{sgml,xml,docbook} tempdir
 	touch test.inc
 	cp *.inc tempdir
 	rm -f test.inc
@@ -137,7 +137,7 @@ bog/index.html: $(sgmlfiler)
 	perl ./collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml tempdir/HTML.index
 	rm -rf tempdir/ bog
 	mkdir bog
-	cp *.{sgml,xml} bog/
+	cp *.{sgml,xml,docbook} bog/
 	(cd bog; docbook2html  -V  %use-id-as-filename% bog.sgml)
 	cp linuxbog.css bog
 	cp images/*.png bog
@@ -165,7 +165,7 @@ bog/enfil.html: $(sgmlfiler)
 	mkdir bog1
 	perl ./collateindex.pl -s Symboler  -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	touch test.inc
-	cp *.{sgml,xml} bog1
+	cp *.{sgml,xml,docbook} bog1
 	cp *.inc bog1
 	rm -f test.inc
 	(cd bog1; jade -t sgml -ihtml -d $(cygnus)\#html -V html-index bog.sgml)
@@ -199,7 +199,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	echo '<!ENTITY magic "eps">' > magic.sgml
 	perl ./collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	touch test.inc
-	cp *.{sgml,xml} tempdir
+	cp *.{sgml,xml,docbook} tempdir
 	cp *.inc tempdir
 	rm -f test.inc
 	(cd tempdir; jade -t sgml -ihtml -d $(cygnus)\#print -V html-index -V nochunks bog.sgml > ged.html)
@@ -210,7 +210,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	mkdir bogpdf
 	touch test.inc
 	cp *.inc bogpdf
-	cp *.{sgml,xml} bogpdf
+	cp *.{sgml,xml,docbook} bogpdf
 	rm -f test.inc
 	rm -f $(targetname)-*.pdf
 	cp images/*.png bogpdf
@@ -232,7 +232,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	echo '<!ENTITY magic "eps">' > magic.sgml
 	touch test.inc	
 	cp *.inc bogps
-	cp *.{sgml,xml} bogps
+	cp *.{sgml,xml,docbook} bogps
 	rm -f test.inc
 	(cd bogps; perl ../../httpsplit.pl *.{sgml,xml})
 	(cd bogps; docbook2ps bog.sgml )
