--- a/misc/gamle_makefiler/Makefile.subdir_RH9
+++ b/misc/gamle_makefiler/Makefile.subdir_RH9
@@ -161,7 +161,7 @@ bog/enfil.html: $(sgmlfiler)
 	mkdir bog1
 	/usr/bin/collateindex.pl -s Symboler  -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	touch test.inc
-	cp *.{sgml,xml} bog1
+	cp *.{sgml,xml,docbook} bog1
 	cp *.inc bog1
 	rm -f test.inc
 	(cd bog1; jade -t sgml -ihtml -d $(cygnus)\#html -V html-index bog.sgml)
@@ -195,7 +195,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	echo '<!ENTITY magic "eps">' > magic.sgml
 	/usr/bin/collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	touch test.inc
-	cp *.{sgml,xml} tempdir
+	cp *.{sgml,xml,docbook} tempdir
 	cp *.inc tempdir
 	rm -f test.inc
 	(cd tempdir; jade -t sgml -ihtml -d $(cygnus)\#print -V html-index -V nochunks bog.sgml > ged.html)
@@ -206,7 +206,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	mkdir bogpdf
 	touch test.inc
 	cp *.inc bogpdf
-	cp *.{sgml,xml} bogpdf
+	cp *.{sgml,xml,docbook} bogpdf
 	rm -f test.inc
 	rm -f $(targetname)-*.pdf
 	cp images/*.png bogpdf
@@ -228,7 +228,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	echo '<!ENTITY magic "eps">' > magic.sgml
 	touch test.inc	
 	cp *.inc bogps
-	cp *.{sgml,xml} bogps
+	cp *.{sgml,xml,docbook} bogps
 	rm -f test.inc
 	(cd bogps; perl ../../httpsplit.pl *.{sgml,xml})
 	(cd bogps; docbook2ps bog.sgml )
