Justeret byggesystemet, så ".sgml"-, ".xml"- og ".docbook"-filer bliver behandlet ens.

--- a/program/Makefile.XML
+++ b/program/Makefile.XML
@@ -73,10 +73,10 @@ pakket_palm: html
 
 kildetekst:
 	mkdir -p $(targetname)-$(version)-source/images
-	cp -p Makefile.XML    $(targetname)-$(version)-source/Makefile
-	cp -p collateindex.pl $(targetname)-$(version)-source/collateindex.pl
-	cp -p *.sgml          $(targetname)-$(version)-source/
-	cp -p images/*.png    $(targetname)-$(version)-source/images/
+	cp -p Makefile.XML         $(targetname)-$(version)-source/Makefile
+	cp -p collateindex.pl      $(targetname)-$(version)-source/collateindex.pl
+	cp -p *.{sgml,xml,docbook} $(targetname)-$(version)-source/
+	cp -p images/*.png         $(targetname)-$(version)-source/images/
 	tar czvf     $(targetname)-$(version)-source.tar.gz $(targetname)-$(version)-source
 	zip -yourDT9 $(targetname)-$(version)-source.zip    $(targetname)-$(version)-source
 	rm -rf $(targetname)-$(version)-source
