Flere filer der skal ignoreres.

--- a/distro/.cvsignore
+++ b/distro/.cvsignore
@@ -1,9 +1,16 @@
+aclocal.m4
+addsubmitbox
+autom4te.cache
+bogoversigt.sgml
+bootstrap
 config.log
 config.status
 configure
 configure.ac
 dato.sgml
+eksempler-sgml
 install-sh
+linuxbog.css
 linuxbog.spec
 linuxbogurl.sgml
 magic.sgml
@@ -14,5 +21,6 @@ misc
 missing
 mkinstalldirs
 ophavsret.sgml
+palm-faelles
 stikord.sgml
 version.sgml
