--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -252,6 +252,9 @@ if HAVE_TIDY
 else !HAVE_TIDY
 	@echo "Du bør installere tidy"
 endif !HAVE_TIDY
+	@if [ -e toplevel-kald ]; then \
+		echo -n "$(targetshortname)/$(targetshortname)/stikord.html " >> ../stikordsfiler; \
+	fi
 	touch html.stamp
 	@echo "Done HTML (html)"
 	@echo ""
