En lille fejl (der ikke skyldes mig!)

--- a/Makefile.in
+++ b/Makefile.in
@@ -33,7 +33,7 @@ FAELLES_FILER:=faelles-filer/*.css faelles-filer/*.sgml
 BYGGE_FILER:=linuxbog.spec misc/insertimagesize \
 		configure Makefile.in Makefile.samling \
 		bootstrap.subdir Makefile.subdir configure.ac.subdir
-Makefile:	$(FALLES_FILER) $(BYGGE_FILER)
+Makefile:	$(FAELLES_FILER) $(BYGGE_FILER)
 	./configure @CONFIGUREARGS@
 
 
