Få online-target til at afhænge af html!

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -208,7 +208,7 @@ pakhtml.clean:
 # MAKEONLINE
 ################################################################################
 .PHONY : online
-online: 
+online: html
 	rm -rf bog/
 	cp -R $(targetshortname) bog/
 if ADD_SUBMITBOX
