Ingen grund til altid at sgml'isere eksemplerne til brug for både html og pdf-udgaverne. De targets der skal bruge dem, gør det allerede selv.

--- a/Makefile.in
+++ b/Makefile.in
@@ -111,7 +111,7 @@ all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$
 	@for dir in $(SUBDIRS) $(SAMLING); do \
 		echo "*** Kører make $@ i $$dir" && \
 		cd $$dir && touch toplevel-kald && \
-		$(MAKE) eksempler-sgml-HTML eksempler-sgml-PDF $@ ; \
+		$(MAKE) $@ ; \
 		rm -f toplevel-kald ; cd .. ; \
 	done ;
 	@if [ -s stikordsfiler ]; then \
