Flyt tekst_til_sgml.pl ind i bin/ hvor det hører hjemme.

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -386,11 +386,11 @@ reallyclean:	clean distclean
 .PHONY : eksempler-sgml-HTML
 eksempler-sgml-HTML: eksempler/*
 	mkdir -p eksempler-sgml
-	for fil in eksempler/*; do perl ../faelles-filer/tekst_til_sgml.pl < $${fil} > eksempler-sgml/`basename $${fil}`; done
+	for fil in eksempler/*; do perl ../bin/tekst_til_sgml.pl < $${fil} > eksempler-sgml/`basename $${fil}`; done
 
 .PHONY : eksempler-sgml-PDF
 eksempler-sgml-PDF: eksempler/*
 	mkdir -p PdfBuildDir/eksempler-sgml
-	for fil in eksempler/*; do perl ../faelles-filer/tekst_til_sgml.pl < $${fil} > PdfBuildDir/eksempler-sgml/`basename $${fil}`; done
+	for fil in eksempler/*; do perl ../bin/tekst_til_sgml.pl < $${fil} > PdfBuildDir/eksempler-sgml/`basename $${fil}`; done
 
 #-----------------------------------------------------------------------------
