splitstikord.pl hører også til i bin/

--- a/Makefile.in
+++ b/Makefile.in
@@ -115,7 +115,7 @@ all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$
 		rm -f toplevel-kald ; cd .. ; \
 	done ;
 	@if [ -s stikordsfiler ]; then \
-		faelles-filer/splitstikord.pl `cat stikordsfiler`; \
+		bin/splitstikord.pl `cat stikordsfiler`; \
 	fi
 	rm -f stikordsfiler
 
