--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -174,7 +174,7 @@ palmpilot.clean:
 if BUILD_PAKHTML
 pakhtml: $(targetshortname)/$(targetname)-html-$(version).tar.gz
 
-$(targetshortname)/$(targetname)-html-$(version).tar.gz:
+$(targetshortname)/$(targetname)-html-$(version).tar.gz: html
 	@echo ".........................................."
 	@echo "Target $(targetshortname):pakhtml"
 	@echo ".........................................."
