Put det fælles stikordsregister i samling.

--- a/Makefile.samling
+++ b/Makefile.samling
@@ -43,7 +43,8 @@ pakhtml: kun-fra-toplevel
 		ln -s ../../../$$dir/eksempler $$dir/eksempler; \
 	done; \
 	cd ..; \
-	tar hczf linuxbog-samling-html-$(version).tar.gz html-samling/;
+	cp ../idx-* .; \
+	tar hczf linuxbog-samling-html-$(version).tar.gz html-samling/
 	@echo 'HTML uden billeder er lidt svært.'
 
 
