Nu uden syntaksfejl!

--- a/Makefile.in
+++ b/Makefile.in
@@ -118,12 +118,12 @@ all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$
 		bin/splitstikord.pl `cat stikordsfiler`; \
 	fi
 	rm -f stikordsfiler
-	@if "x$(SAMLING)" != "x"; then \
+	@if [ "x$(SAMLING)" != "x" ]; then \
 		echo "*** Kører make $@ i samling" && \
-		cd $$dir && touch toplevel-kald && \
+		cd samling && touch toplevel-kald && \
 		$(MAKE) $@ ; \
 		rm -f toplevel-kald ; cd .. ; \
-	done ;
+	fi ;
  
 
 ################################################################################
