--- a/Makefile.in
+++ b/Makefile.in
@@ -107,7 +107,7 @@ reallyclean:	$(addsuffix /Makefile,$(SUBDIRS) $(SAMLING))
 # være i orden.
 .PHONY : all html pdf pakhtml palmpilot eksempelbackup
 all html pdf pakhtml palmpilot eksempelbackup :	Makefile $(addsuffix /Makefile,$(SUBDIRS) $(SAMLING))
-	bin/titleabstract.pl $(addsuffix /indhold.sgml,$(SUBDIRS)) > titleabstract.php
+	bin/titleabstract.pl $(addsuffix /indhold.sgml,$(SUBDIRS) $(SAMLING)) > titleabstract.php
 	touch stikordsfiler;
 	@for dir in $(SUBDIRS); do \
 		echo "*** Kører make $@ i $$dir" && \
