Byg også en "html uden billeder"-udgave af samling. Som en ekstra bonus: den formentlig grimmeste tar-kommando I har set!

--- a/Makefile.samling
+++ b/Makefile.samling
@@ -46,7 +46,9 @@ pakhtml: kun-fra-toplevel
 	cp ../idx-* .; \
 	tar hczf linuxbog-samling-html-$(version).tar.gz html-samling/
 	@echo 'HTML uden billeder er lidt svært.'
+	@tar hczf linuxbog-samling-htmlub-$(version).tar.gz $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.html,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.css,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(addsuffix /eksempler,$(SUBDIRSSAMLING))) 
 
+# Nej, jeg synes heller ikke den sidste tar-kommando er køn! .Henrik
 
 eksempelbackup:
 	@echo 'eksempelbackup target for samling-"bogen" er endnu ikke implementeret.'
