Udskift en kommentar.

--- a/Makefile.samling
+++ b/Makefile.samling
@@ -45,8 +45,8 @@ pakhtml: kun-fra-toplevel
 	cd ..; \
 	cp ../idx-* .; \
 	tar hczf linuxbog-samling-html-$(version).tar.gz html-samling/
-	@echo 'HTML uden billeder er lidt svært.'
 	@tar hczf linuxbog-samling-htmlub-$(version).tar.gz $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.html,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(join $(addsuffix /,$(SUBDIRSSAMLING)),$(addsuffix /*.css,$(SUBDIRSSAMLING)))) $(addprefix html-samling/,$(addsuffix /eksempler,$(SUBDIRSSAMLING))) 
+	@echo 'Mon der er behov for en samling af billederne fra alle bøgerne?'
 
 # Nej, jeg synes heller ikke den sidste tar-kommando er køn! .Henrik
 
